2013-12-26  Murray Stokely  <mstokely@google.com>

	* src/mutators.cpp: Support setting int32 values with character
	  vectors of a decimal number, as we do by necessity for int64s.
	* inst/unitTests/runit.int32.R (test.int32): Add tests for above.
	* NAMESPACE: Add missing export for .DollarNames
	  EnumValueDescriptor to allow completion on that class.
	* R/00classes.R: Update FileDescriptor '$' dispatch to work
	  properly for the names of fields defined in the FileDescriptor,
	  instead of just returning NULL even for types returned by $
	  completion.
	* vignettes/RProtoBuf-intro.Rnw (subsubsection{Retrieve fields}):
	  Update the type mapping tables to note that characters can be
	  extracted from 64-bit integer types with the
	  RProtoBuf.int64AsString type and note that int32 and int64 types
	  can be set to character values representing decimal numbers.
	* TODO: Update todo list.

2013-12-23  Murray Stokely  <mstokely@google.com>

	* DESCRIPTION (Version): increment.
	* inst/proto/addressbook.proto: Reserved extension fields in
	  tutorial.Person.
	* vignettes/RProtoBuf-intro.Rnw (subsection{Extensions}): Added a
	  new section documenting protocol buffer extensions.

2013-12-20  Murray Stokely  <mstokely@google.com>

	* R/00classes.R: Correct a bug that incorrectly dispatched
	  as.character() when as.list() was called on Descriptor objects.

2013-12-18  Murray Stokely  <mstokely@google.com>

	* R/completion.R (.DollarNames.EnumValueDescriptor): Add
	  $-completion for EnumValueDescriptor and FileDescriptor classes
	  as with other S4 RProtoBuf classes here.
	* R/00classes.R (P): Ensure that the FileDescriptor $name() method
	  accepts a boolean for full paths just like the generic name()
	  method.
	* R/wrapper_EnumDescriptor.R: Add better error checking.  Expect
	  exceptions if wrong types are provided for arguments rather than
	  just returning NULL.

2013-12-18  Dirk Eddelbuettel  <edd@debian.org>
